Change info.p file to make app accessible from webpage

--- a/iBuilt/Info.plist
+++ b/iBuilt/Info.plist
@@ -45,5 +45,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>ibuiltbanner</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>net.learn2develop.IbuiltBanner</string>
+		</dict>
+	</array>
 </dict>
 </plist>
